--- a/html/quiz_random.html
+++ b/html/quiz_random.html
@@ -61,7 +61,7 @@
             <p>
               <input type="radio" name="likeliness" value="1"> Yes<br>
               <input type="radio" name="likeliness" value="0"> No<br>
-              <input type="radio" name="likeliness" value="condition"> true if&lt;5, false if&gt;5<br>
+              <input type="radio" name="likeliness" value="condition"> Only if I put more than 10<br>
               <input type="radio" name="likeliness" value="other"> Other / not clear from instructions
             </p>
           </form>
