--- a/index.htm
+++ b/index.htm
@@ -14,9 +14,14 @@
     Sorry, you need to enable javascript in order to play this game.
   </noscript>
   <p id="waitingForPlayers">
-    Welcome to the game! Please be patient while waiting for enough players to connect
-    <span id="span_dots">.</span><br/>
-    Currently connected: <span id="span_connected"></span><br/>
+    Welcome to the game! 
+    <br/>
+    <span id="span_connected_text">
+      Please be patient while waiting for enough players to connect
+      <span id="span_dots">.</span><br/>
+      Currently connected: <span id="span_connected"></span>
+    </span>
+    <br/>      
     <br/>
     <span id="span_msg"></span>
   </p>
