--- a/html/ended.html
+++ b/html/ended.html
@@ -1,16 +1,15 @@
 <!doctype html>
-<title>ENDED</title>
+<title>Game Ended</title>
 <link rel="stylesheet" href="/ultimatum/html/css/bootstrap.min.css" />
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <body>
   <div id="root">
-    <h1> THANK YOU FOR PLAYING.</h1>
+    <h1>THANK YOU FOR PLAYING.</h1>
     Please go back to the Amazon Mechanical Turk web site and submit the hit.
     <br/>
     We usually pay within 24 hours. For any problem, please look for a HIT called <strong>ETH Descil Trouble Ticket</strong> and file a new trouble ticket reporting the following information:
     <ul>
       <li>your turker id</li>
-      <li>the HIT name: <em>nodeGame</em></li>
       <li>your exit code, as written below</li>
       <li>your browser name and version</li>
     </ul>
