--- a/html/instructions_random.html
+++ b/html/instructions_random.html
@@ -10,7 +10,7 @@
       <div id="random">
         <p>Welcome to our experiment! 16 people, that is you and 15 others, have joined us.</p>
 
-        <p><strong>Your decision.</strong><br /> You will receive 20 coins per round for 20 rounds. Each round, you will have to choose how many coins to put directly into your personal account, and how many coins to put into a group account.</p>
+        <p><strong>Your decision.</strong><br /> You will receive 20 coins per round for 25 rounds. Each round, you will have to choose how many coins to put directly into your personal account, and how many coins to put into a group account.</p>
 
         <p><strong>Random group matching.</strong><br /> Each round you will be randomly assigned to a new group. Each group consists of 4 people, that is, you and three (possibly different) random others.</p>
 
@@ -38,7 +38,7 @@
             <tr><th>Any amount</th><th>Half of that amount</th></tr>
           </tfoot>
         </table>
-        <p><strong>Total return.</strong><br />You will be paid according to the final amount of coins earned over the whole experiment. 20 coins are equal to 0.075 USD, and the maximum amount you can win is 800 coins, equivalent to 3 USD.</p>
+        <p><strong>Total return.</strong><br />You will be paid according to the final amount of coins earned over the whole experiment. 20 coins are roughly equal to 0.06 USD, and the maximum amount you can win is 1000 coins, equivalent to 3 USD.</p>
       </div>
     </div>
     <p>If you understood the instructions correctly press the button to proceed to the game. </p>
