--- a/index.htm
+++ b/index.htm
@@ -14,14 +14,18 @@
     Sorry, you need to enable javascript in order to play this game.
   </noscript>
   <p id="waitingForPlayers">
-    Welcome to the game! 
+    <strong>Welcome to the game!</strong> 
+    <br/>
+    <br/>
+    We will start a new session when 20 players are connected <em>simultaneously</em>. Then we will randomly select 16 among those who successfully read the instructions and answered a preliminary quiz to actually take part in the game.
+    <br/>
     <br/>
     <span id="span_connected_text">
       Please be patient while waiting for enough players to connect
       <span id="span_dots">.</span><br/>
       Currently connected: <span id="span_connected"></span>
     </span>
-    <br/>      
+    <br/>
     <br/>
     <span id="span_msg"></span>
   </p>
