--- a/index.htm
+++ b/index.htm
@@ -17,7 +17,7 @@
     <strong>Welcome to the game!</strong> 
     <br/>
     <br/>
-    We will start a new session when 20 players are connected <em>simultaneously</em>. Then we will randomly select 16 to actually take part in the game, among those who successfully read the instructions and answered a preliminary quiz.
+    We will start a new session when 20 players are connected <em>simultaneously</em>. Then we will randomly select 16 to actually take part in the experiment, among those who successfully read the instructions and answered a preliminary quiz.
     <br/>
     <br/>
     <span id="span_connected_text">
