updated trouble ticket

--- a/html/obco.html
+++ b/html/obco.html
@@ -15,7 +15,7 @@
       You will be paid the full show-up fee of 1USD. Please go back to the Amazon Mechanical Turk web site and submit the hit.
     </span>    
     <br/><br/>
-    We usually pay within 24 hours. For any problem, please look for a HIT called <strong>ETH Descil Trouble Ticket</strong> and file a new trouble ticket reporting the following information:
+    We usually pay within 24 hours. For any problem, please look for a HIT called <strong>ETH Descil Trouble Ticket for Decision Making Study</strong> and file a new trouble ticket reporting the following information:
     <br/><br/>
     <ul>
       <li>your turker id</li>
