--- a/unauth.htm
+++ b/unauth.htm
@@ -13,6 +13,6 @@
     If you think this happened by mistake, please try to visit again the <em>requirements</em> page <strong>following the link provided to you in description of the task on the Amazon Mechanical Turk web site.</strong>.
   </p>
   <p>
-    If the problem persists please look a for a HIT named "ETH Descil Trouble Ticket" on Amazon Mechanical Turk and report your problem. Thank you very much for your cooperation.
+    If the problem persists please look a for a HIT named "ETH Descil Trouble Ticket for Decision Making Study" on Amazon Mechanical Turk and report your problem. Thank you very much for your cooperation.
   </p>
 </body>
