--- a/index.online.htm
+++ b/index.online.htm
@@ -10,13 +10,24 @@
 <link rel='stylesheet' href='html/css/index.css'></link>
 <!-- end -->
 <body>
+  <noscript>
+    Sorry, you need to enable javascript in order to play this game.
+  </noscript>
   <p id="waitingForPlayers">
-    <strong>Welcome to the experiment!</strong> 
+    <strong>Welcome to the game!</strong> 
     <br/>
     <br/>
-    We will begin shortly...
+    We will start a new session when 20 players are connected <em>simultaneously</em>. Then we will randomly select 16 to actually take part in the experiment, among those who successfully read the instructions and answered a preliminary quiz.
     <br/>
     <br/>
+    <span id="span_connected_text">
+      Please be patient while waiting for enough players to connect
+      <span id="span_dots">.</span><br/>
+      Currently connected: <span id="span_connected"></span>
+    </span>
+    <br/>
+    <br/>
+    <span id="span_msg"></span>
   </p>
   <script src="js/connect.js"></script>
 </body>
