--- a/html/postgame.html
+++ b/html/postgame.html
@@ -24,7 +24,7 @@
 </style>
 <body align="center">
   <div id="root">
-    <h1> A last few questions... </h1>
+    <h1> Please answer the following questions</h1>
     <p>You must answer all the questions marked with *. to complete the task.</p> 
     <div>
       <h4>* 1. What do you think is the name of this game ?</h4>
