extra time between parts; bigger font CHF; timer to DISPATCH

--- a/html/ended.html
+++ b/html/ended.html
@@ -7,6 +7,7 @@
     <h1 id="h1title"></h1>
     <span id="subtitle"></span>
     <br/>
+    <span id="extraText" style="font-size: 18px;"></span>
   </div>
 </body>
 <script type="text/javascript">
@@ -22,20 +23,4 @@
       h1title.innerHTML = 'Thank you for taking part in the experiment';
       subtitle.innerHTML = 'Please wait for your number to be called.';
   }
-//   if (roomType === 'exo_low') {
-//     variance = document.getElementById('variance');
-//     variance.innerHTML = 4;
-//   }
-//   else if (roomType === 'exo_lowlow') {
-//     variance = document.getElementById('variance');
-//     variance.innerHTML = 20;
-//   }
-//   else if (roomType === 'exo_extralow') {
-//     variance = document.getElementById('variance');
-//     variance.innerHTML = 100;
-//   }
-//   else if (roomType === 'exo_minor') {
-//     variance = document.getElementById('variance');
-//     variance.innerHTML = 1000;
-//   }
 </script>
