optimized for resolutio 1440*900

--- a/html/ended.html
+++ b/html/ended.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <title>Game Ended</title>
-<link rel="stylesheet" href="/ultimatum/html/css/bootstrap.min.css" />
-<link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" href="css/bootstrap.min.css" />
+<link rel="stylesheet" type="text/css" href="css/instructions.css">
 <body>
-  <div id="root">
+  <div id="central-container" class="container">
     <h1 id="h1title"></h1>
     <span id="subtitle"></span>
     <br/>
