--- a/html/postgame.html
+++ b/html/postgame.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <title>QUESTIONNAIRE</title>
-<link rel="stylesheet" type="text/css" href="css/style.css">
 <link rel="stylesheet" href="css/jqueryui.min.css" />
 <link rel="stylesheet" href="css/bootstrap.min.css" />
 <style type="text/css">
@@ -24,10 +23,10 @@
 </style>
 <body align="center">
   <div id="root">
-    <h1> Please answer the following questions</h1>
+    <h1> Please fill in the questionnaire</h1>
     <p>You must answer all the questions marked with *. to complete the task.</p> 
     <div>
-      <h4>* 1. What do you think is the name of this game ?</h4>
+      <h4>* 1. Choose a name for the game you have just played.</h4>
       <input type="text" name="game-name" id="game-name" size="50" /><br>
     </div>
     <div>
