--- a/html/quiz_endo.html
+++ b/html/quiz_endo.html
@@ -3,11 +3,10 @@
 <link rel="stylesheet" type="text/css" href="/meritocracy/html/css/quiz.css">
 <link rel="stylesheet" href="/meritocracy/html/css/jqueryui.min.css" />
 <link rel="stylesheet" href="/meritocracy/html/css/bootstrap.min.css" />
-
 <body>
 
   <div id="container_quiz">
-    <h1>Before starting the game answer the following questions:</h1>
+    <h1>Please complete this short quiz:</h1>
     
     <div id="quiz"> 
       <dl>
