--- a/html/quiz_blackbox.html
+++ b/html/quiz_blackbox.html
@@ -6,7 +6,7 @@
 <body>
 
   <div id="container_quiz">
-    <h1>Before starting the game answer the following questions:</h1>
+    <h1>Please complete this short quiz:</h1>
     
     <div id="quiz"> 
       <dl>
