adapted quiz to group account

--- a/html/bidder.html
+++ b/html/bidder.html
@@ -51,7 +51,7 @@
       
       <div id="previous-round-info" class="col-md-12" style="display: none; clear: both; border-top: 1px solid #CCC">
         <h3>Reminder: in the previous round</h3>
-        <p>You decided to put <strong><span id="yourPB"></span></strong> coins into your personal box.</p>
+        <p>You decided to put <strong><span id="yourPB"></span></strong> coins into the group account.</p>
         <p>
           You decided to put <strong><span id="yourOldContrib"></span></strong> coins into the group account and the return was <strong><span id="yourReturn"></span></strong>.
         </p>
