--- a/html/quiz_exo_lowhigh.html
+++ b/html/quiz_exo_lowhigh.html
@@ -28,7 +28,7 @@
         <dd>
           <span id="lowestPayement_result" class="quiz_result"></span>
           <form name="lowestPayement" id="lowestPayement">
-            <p> If you contribute 5, what is the lowest payment you are guaranteed from this round ? </p>
+            <p> If you transfer 5 coins to the group account, how many coins in total in this round are you guaranteed to earn ? </p>
             <p>
               <input type="radio" name="lowestPayement" value="5"> 5<br>
               <input type="radio" name="lowestPayement" value="17.5"> 17.5<br>
@@ -42,7 +42,7 @@
         <dd>
           <span id="leastGuarantee_result" class="quiz_result"></span>
           <form name="leastGuarantee" id="leastGuarantee">
-            <p> If you contribute 5, and all others do the same, how much are you guaranteed from this round ? </p>
+            <p> If you transfer 5 coins to the group account, and all others do the same, how many coins in total in this round are you guaranteed to earn ? </p>
             <p>
               <input type="radio" name="leastGuarantee" value="7.5"> 7.5<br>
               <input type="radio" name="leastGuarantee" value="25"> 25<br>
@@ -59,7 +59,7 @@
             <p> Given the following setup: </p>
             <table class="table table-striped" align="center">
               <thead>
-                <tr><th>Player/s</th><th>Contribution to Group Account</th></tr>
+                <tr><th>Player/s</th><th>Transfer to Group Account</th></tr>
               </thead>
               <tbody>
                 <tr><td>You</td><td>5</td></tr>
