improved quiz and instructions_lab

--- a/html/instructions_lab.html
+++ b/html/instructions_lab.html
@@ -10,16 +10,18 @@
       <br/>
       <div>
         <p>
-          Please use this time to read the instructions that have been handed to you in paper format carefully.
+          Read the instructions that have been handed to you in paper format carefully.
         </p>        
         <p>
-          Have an eye on the timer, because once it reaches zero, the game will advance automatically.
+          Have an eye on the timer, if it reaches zero, the experiment will advance automatically.
         </p>
         <p>
-          Once you have finished reading the instructions sheet, and have understood them, click on the bottom "Proceed to the game" below. 
+          Once you have read and understood the instructions click the button "Proceed to the game". 
         </p>
         <p>
-          The next stage will be a small quiz to make sure everybody has understood the instructions correctly. You are allowed to answer the questions multiple times to find out the correct answer.
+          The next stage will be a small quiz to make sure everybody has understood the instructions.
+          <br/>
+          You are allowed to answer the questions multiple times to find out the correct answers.
         </p>
       </div>
     </div>
