--- a/html/quiz_random.html
+++ b/html/quiz_random.html
@@ -28,7 +28,7 @@
         <dd>
           <span id="lowestPayement_result" class="quiz_result"></span>
           <form name="lowestPayement" id="lowestPayement">
-            <p> If you transfer 5 coins to the group account, how many coins in total in this round are you guaranteed to earn ? </p>
+            <p> If you transfer 5 coins to the group account, what is the minimum amount of coins that you can win in this round ? </p>
             <p>
               <input type="radio" name="lowestPayement" value="5"> 5<br>
               <input type="radio" name="lowestPayement" value="17.5"> 17.5<br>
@@ -42,7 +42,7 @@
         <dd>
           <span id="leastGuarantee_result" class="quiz_result"></span>
           <form name="leastGuarantee" id="leastGuarantee">
-            <p> If you transfer 5 coins to the group account, and all others do the same, how many coins in total in this round are you guaranteed to earn ? </p>
+            <p> If you transfer 5 coins to the group account, and all others do the same, what is the minimum amount of coins that you can win in this round ? </p>
             <p>
               <input type="radio" name="leastGuarantee" value="7.5"> 7.5<br>
               <input type="radio" name="leastGuarantee" value="25"> 25<br>
