displayed round number, and bonus saved earlier

--- a/html/bidder.html
+++ b/html/bidder.html
@@ -20,7 +20,7 @@
     <div id="current-round-info" class="col-md-12">
       
       <div class="col-md-12 mini-pushed-down">
-        <h3>Current Round</h3>       
+        <h3>Current Round <span id="round_count"></span></h3>       
         <br/>
         <table id="bid_table">
           <tr>
