text in bidder screen updated

--- a/html/bidder.html
+++ b/html/bidder.html
@@ -60,7 +60,7 @@
       
       <div id="timeupReminder">
         <p style="clear: both; text-align: center; border-top: 1px solid #CCC"><br/>
-          <strong>Attention: </strong> if you do not make a choice before the time expires, your previous decision will be used. On the first round, a random decision will be made for you.
+          <strong>Attention: </strong> if you do not make a choice before the time expires,<br/> <span id="attention_any" style="display:none">your previous decision will be used.</span><span id="attention_1" style="display:none">a random decision will be made for you.</span>
         </p>
       </div>
       
