--- a/monitor.htm
+++ b/monitor.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <title>Monitor Screen</title>
 <body>
-  <div id="root"></div> 
+  <div id="root"></div>
 <script src="/socket.io/socket.io.js"></script>
 <script src="/javascripts/nodegame-full.js" charset="utf-8"></script>
 <script src="./js/ChannelList.js" charset="utf-8"></script>
@@ -9,8 +9,11 @@
 <script src="./js/ClientList.js" charset="utf-8"></script>
 <script src="./js/GameList.js" charset="utf-8"></script>
 <script src="./js/Monitor.js" charset="utf-8"></script>
-<link rel='stylesheet' href='./html/css/bootstrap.min.css'></link>
+<script src="./js/jquery-1.11.1.min.js" charset="utf-8"></script>
+<script src="./js/bootstrap.js" charset="utf-8"></script>
+<link rel='stylesheet' href='./html/css/bootstrap.css'></link>
 <link rel='stylesheet' href='/stylesheets/monitor.css'></link>
+
 
 <script>
     window.onload = function() {
