fixed errors in index file

--- a/public/index.htm
+++ b/public/index.htm
@@ -14,7 +14,9 @@
     <strong>Welcome to the experiment!</strong> 
     <br/>
     <br/>
-    We will begin shortly...
+    We will begin shortly<span id="span_dots">.</span><br/>
+    Currently connected: <span id="span_connected"></span><br/>
+    <span id="span_msg"></span>
     <br/>
     <br/>
   </p>
